--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="flex justify-between mt-6 w-full mx-auto max-w-[1240px]">
+    <header class="d-block px-4 md:flex justify-between mt-6 w-full mx-auto max-w-[1240px]">
         <div>
             <h1 class="text-5xl font-bold">It's good <br> tea time at The <br> Tea House</h1>
             <P class="my-5">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</P>
@@ -28,7 +28,7 @@
             <h2 class="text-3xl font-bold text-center">Our Featured Products</h2>
             <p class="text-center mt-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
 
-            <div class="flex justify-between mt-7">
+            <div class="ml-12 md:flex justify-between mt-7">
                 <div class="py-7 text-center rounded-md w-[270px] bg-gradient-to-t from-slate-100 to-slate-200">
                     <img class="mx-auto" src="images/tea-1.png" alt="">
                     <h3 class="text-2xl font-bold my-3">Milk Tea</h3>
@@ -53,9 +53,9 @@
         </section>
 
         <section class="mt-24 w-full mx-auto max-w-[1240px]">
-            <div class="flex gap-10">
+            <div class="md:flex gap-10">
                 <div class="w-1/2">
-                    <div class="grid grid-cols-2 gap-5">
+                    <div class="grid ml-8 md:grid-cols-2 gap-5">
                         <div class="rounded-md bg-gradient-to-l from-rose-50 to-rose-100 w-[300px] h-40"></div>
                         <div class="rounded-md bg-gradient-to-t from-rose-50 to-rose-100 w-[300px] h-110 row-span-2">
                             <img class="mx-auto py-10" src="images/fresh-1.png" alt="">
@@ -66,7 +66,7 @@
                         <div class="rounded-md bg-gradient-to-l from-slate-100 to-slate-200 w-[300px] h-40"></div>
                     </div>
                 </div>
-                <div class="w-1/2">
+                <div class="w-full ml-5 md:w-1/2">
                     <h1 class="text-3xl font-bold">Great Tea, Freshly <br> Presented</h1>
                     <p class="mt-2">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan. Establishing in 2006, Gong cha had been deeply custoers  because of good words of mouth and unique  appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
                     <h1 class="mt-4 text-1xl font-bold">Unique Taste</h1>
